# hexlet-calendar-bot

./: .env.example  .gitignore  README.md  pyproject.toml  token.json
calendarbot/: __init__.py  config.py  start.py
calendarbot/Bot/: actions.py  bot.py  botrequests.py  calendar.py  calendarmodule.py  events.py  googleauth.py  updates.py
calendarbot/Controllers/: usercontroller.py
calendarbot/Migrations/: drop.py  insert.py
calendarbot/Models/: calendar.py  user.py
calendarbot/Utils/: date_estimate.py  validators.py
calendarbot/src/: actions.py  bot.py  bot_requests.py  calendar.py  config.py  events.py  start.py  updates.py
calendarbot/src/neuronetwork/: neuro.py
hexlet_calendar/src/: bot.py  events_handler.py  quickstart.py  start.py
